# jepa-q2d2

./: .gitignore  README.md  pyproject.toml
configs/: ds_ddp_h200.json  ds_zero2.json  ds_zero2_tokenizer.json  ds_zero2_v9_4gpu.json
koe/: __init__.py  bigvgan_adapter.py  codec.py  codec_impl.py  config.py  dataset.py  eval_codec.py  flow_decoder.py  generate.py  hf_utils.py  model.py  model_qwen.py  text.py  train.py  train_bigvgan_adapter.py  train_flow_decoder.py  train_tokenizer.py  train_vocos_decoder.py  vocos_decoder.py
koe/fast/: __init__.py  benchmark_codecs.py  eval_metrics.py  eval_utmos.py  experiment_configs.py  gcs_checkpoint.py  hf_codec.py  launcher.py  losses.py  q2d2.py  train_stage1.py  train_stage2.py  train_v2_stage2.py  visualize_embeddings.py
paper/: main.tex  references.bib
paper/scripts/: lattice_quantizer.py  sigreg.py  sweep_round2.sh  sweep_sigreg.sh  train_sigreg_stage1.py
scripts/: add_mimi_to_embedding_analysis.py  comprehensive_embedding_analysis.py  emotion_multiclass_analysis.py  extract_sigreg_feature_dist.py  infer_from_hf.py  mimi_reconstruction_baseline.py  plot_architecture.py  plot_paper_a_figures.py  plot_sigreg_hero.py  pre_encode.py  run_reconstruct.py  run_wer_eval.py  speech_only_analysis.py  ssl_baselines_cross_lingual.py  style_emotion_embedding_analysis.py  synthesize.py  visualize_embeddings_hf.py
v2/transformer_decoder/: model.py  train.py
